[package]
name = "uahmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Remember to revert this before releasing your game!
[dependencies]
bevy = { version = "0.13.2"}
bevy_fast_tilemap = "0.7.3"
#bevy_ecs_tilemap = {path = "../bevy_ecs_tilemap"}
iyes_perf_ui = "0.2"
#bevy_xpbd_2d = "0.4.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
